--- a/config/deployments/development-production.yml
+++ b/config/deployments/development-production.yml
@@ -22,6 +22,8 @@ platform:
       mount: no
     iam:
       mount: no
+    organization:
+      mount: no
     storage:
       mount: no
     # game:
