--- a/services/organization/spec/dummy/config/database.yml
+++ b/services/organization/spec/dummy/config/database.yml
@@ -5,8 +5,8 @@ default: &default
   adapter: postgresql
   encoding: unicode
   host: <%= ENV.fetch('RAILS_DATABASE_HOST') { 'localhost' } %>
-  username: <%= ENV.fetch('RAILS_DATABASE_USER') { 'vagrant' } %>
-  password: <%= ENV.fetch('RAILS_DATABASE_PASSWORD') { 'vagrant' } %>
+  username: <%= ENV.fetch('RAILS_DATABASE_USER') { 'admin' } %>
+  password: <%= ENV.fetch('RAILS_DATABASE_PASSWORD') { 'admin' } %>
   pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
   port: 5432
   timeout: 5000
